feature: 提交刷新控件

--- a/src/components/lateralview/index.module.scss
+++ b/src/components/lateralview/index.module.scss
@@ -1,7 +1,7 @@
 .search-page{
     display: flex;
     width: auto;
-    height: 80px;
+    height: 45Px;
     display: flex;
     background: #fe733b;
     flex-direction: row;
